# VerificationPlusPlus

./: .gitignore  CMakeLists.txt  InstrumentationExample.cpp  README.md  TypeTheory.h  cmake.txt
doc/: Draft.tex  references.bib
my scma/: abccmd  dbgSC  grammar.h  lse0.th  main.cpp  makefile  sc  sc.cpp  scImpl.cpp  scTheory.cpp  scTheory.h  scma.h  scma.tokens  scmaLexer.cpp  scmaLexer.h  scmaParser.cpp  scmaParser.h  scz3helpers.h  session.runTh.7670.txt  session.runTh.8741.txt  traverse.cpp  traverse.h
my_scma/: abc.command.list  checkchoice.cpp  checkchoice.h  err  grammar.cpp  lse.th  ma.cpp  maImpl.cpp  main.cpp  makefile  out  runSC  sc  sc.cpp  scDeclarations.cpp  scGenVocab.cpp  scImpl.cpp  scOptions.cpp  scTheoryReader.cpp  scma.g  scma.h  scmaLexer.cpp  scmaLexer.h  scmaParser.cpp  scmaParser.h  session.runTh.10251.txt  session.runTh.10471.txt  session.runTh.17104.txt  session.runTh.17110.txt  session.runTh.17169.txt  session.runTh.17379.txt  session.runTh.17443.txt  session.runTh.17450.txt  session.runTh.17477.txt  session.runTh.17541.txt  session.runTh.17592.txt  session.runTh.17634.txt  session.runTh.17683.txt  session.runTh.17737.txt  session.runTh.17969.txt  (+50 more)
scma/: a.th  build  checkchoice.h  eina.free.th  eina.th  err  inorder.th  ls.th  lseq.th  ma.cpp  out  runMA  runTh  sc  sc.cpp  scDeclarations.cpp  scGenVocab.cpp  scImpl.cpp  scTimer.h  scma.h  scmaLexer.cpp  scmaLexer.h  scmaParser.h  scvocval.h  scz3helpers.cpp  traverse.h  variable.h
src/: InstrumentationFunctions.cpp  InstrumentationTest.txt  MyASTTool.cpp  MyASTTool.h  TypeTheory.cpp  (+7 more)
(+34 files in other folders)
